# omhismb2019

./: .gitconfig  README.md
is_trees/: IS_all.fa  IS_postitions.txt  README.md  compute_tree.pl  convert_to_binary.pl  create_all_sketches.pl  create_matrix.pl  insert_is.pl  produce_is.pl
omh_compute/: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  Tupfile  Tuprules.tup  combination.hpp  compile.sh  configure.ac  glob.hpp  omh.cpp  omh.hpp  omh_compare_exact.cc  omh_compare_exact.hpp  omh_compare_exact.yaggo  omh_compare_exact_seq.cc  omh_compare_exact_seq.hpp  omh_compare_exact_seq.yaggo  omh_compare_sketch.cc  omh_compare_sketch.hpp  omh_compare_sketch.yaggo  omh_compare_sketches.cc  omh_compare_sketches.yaggo  omh_exact.cpp  omh_exact.hpp  omh_sketch.cc  omh_sketch.hpp  omh_sketch.yaggo  parse_file.cpp  parse_file.hpp  seeded_prg.hpp  xxhash.hpp
omh_compute/tests/: Makefile.am  common.cc  common.hpp  test_combination.cc  test_glob.cc  test_omh.cc  test_omh_exact.cc  test_seed_prg.cc
random_sequences/: README.md  generate_random_pairs.py  multiboxplot.py  run_omh_and_combine.pl
