AC_INIT([omh_compute], [0.0.1], [gmarcais@cs.cmu.edu])
AC_CANONICAL_HOST
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
#AM_INIT_AUTOMAKE([subdir-objects foreign parallel-tests color-tests])
AM_SILENT_RULES([yes])
#AC_CONFIG_SRCDIR([.])
#AC_CONFIG_HEADERS([config.h])
#PKG_PROG_PKG_CONFIG

# Change default compilation flags
#AC_LANG(C++)
AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
